<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabEsta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="11dp"
        android:clickable="true"
        app:backgroundTint="@android:color/white"
        app:fabSize="normal"
        app:srcCompat="@drawable/mama" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/T"
                        android:textColor="@color/colorPrimary" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/edtSizeT"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="@string/cm"
                            android:inputType="number|numberSigned|numberDecimal"
                            android:textAlignment="center"
                            android:textColorHint="@color/colorPrimaryDark"
                            android:textSize="12sp"
                            android:autofillHints="" />

                        <RadioGroup
                            android:id="@+id/rdgT"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2">

                            <RadioButton
                                android:id="@+id/rdTX"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:text="@string/TX" />

                            <RadioButton
                                android:id="@+id/rdT0"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:text="@string/T0" />

                            <RadioButton
                                android:id="@+id/rdTIs"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:text="@string/is" />
                        </RadioGroup>

                    </LinearLayout>

                <RadioGroup
                    android:id="@+id/rdgIs"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rdDCIS"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/DCIS" />

                    <RadioButton
                        android:id="@+id/rdLCIS"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/LCIS" />

                    <RadioButton
                        android:id="@+id/rdPaguet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/paguet" />
                </RadioGroup>

                <RadioGroup
                    android:id="@+id/rdgT4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rdT4A"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/T4A" />

                    <RadioButton
                        android:id="@+id/rdT4B"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/T4B" />

                    <RadioButton
                        android:id="@+id/rdT4C"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/T4C" />

                    <RadioButton
                        android:id="@+id/rdT4D"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/T4D" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/CORP"
                    android:textColor="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edtN"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:hint="@string/NN"
                        android:inputType="number"
                        android:textAlignment="center"
                        android:textColorHint="@color/colorPrimaryDark"
                        android:textSize="12sp"
                       />

                    <RadioGroup
                        android:id="@+id/rdgN"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2">

                        <RadioButton
                            android:id="@+id/rdNX"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/NX" />

                        <RadioButton
                            android:id="@+id/rdN0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/N0" />
                    </RadioGroup>

                </LinearLayout>

                <RadioGroup
                    android:id="@+id/rdgN0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rdIp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/N0ip" />

                    <RadioButton
                        android:id="@+id/rdIl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/N0il" />

                    <RadioButton
                        android:id="@+id/rdMolP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/N0mp" />

                    <RadioButton
                        android:id="@+id/rdMolL"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/N0ml" />
                </RadioGroup>

                <RadioGroup
                    android:id="@+id/rdgN1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rdMI"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/N1i" />

                    <RadioButton
                        android:id="@+id/rdN1A"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/N1a" />

                    <RadioButton
                        android:id="@+id/rdN1B"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/N1b" />

                    <RadioButton
                        android:id="@+id/rdN1C"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/N1c" />
                </RadioGroup>

                <RadioGroup
                    android:id="@+id/rdgN2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rdN2A"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/N2a" />

                    <RadioButton
                        android:id="@+id/rdN2B"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/N2b" />

                </RadioGroup>

                <RadioGroup
                    android:id="@+id/rdgN3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <RadioButton
                        android:id="@+id/rdN3A"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/N3a" />

                    <RadioButton
                        android:id="@+id/rdN3B"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/N3b" />

                    <RadioButton
                        android:id="@+id/rdN3C"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/N3c" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/M"
                    android:textColor="@color/colorPrimary" />

                <RadioGroup
                    android:id="@+id/rdgM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rdMx"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/MX" />

                    <RadioButton
                        android:id="@+id/rdM0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/M0" />

                    <RadioButton
                        android:id="@+id/rdM1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/M1" />
                </RadioGroup>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>